--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-tolga xright
+<DOCTYPE! html>
+<html lang="en">
+<head>
+	<script src="script.js"></script>
+	<link rel="stylesheet" href="style.css" />
+  <meta charset="utf-8">
+  <title>Basic html layout example</title>
+</head>
+<body class="hello">
+  <header>
+  	<hgroup>
+    <h1>JAVA</h1>
+    <h2>Programlama</h2>
+</hgroup>
+  </header>
+  <nav>
+  <div class="dropdown">
+  <button class="mainmenubtn">Ana Menü</button>
+  <div class="dropdown-child">
+    <a href="http://wwww.alanadiniz.com/sayfa1.html">Alt Sayfa 1</a>
+    <a href="http://wwww.alanadiniz.com/sayfa2.html">Alt Sayfa 2</a>
+    <a href="http://wwww.alanadiniz.com/sayfa3.html">Alt Sayfa 3</a>
+    <a href="http://wwww.alanadiniz.com/sayfa4.html">Alt Sayfa 4</a>
+    <a href="http://wwww.alanadiniz.com/sayfa5.html">Alt Sayfa 5</a>
+  </div>
+</div>
+
+  </nav>
+  <section>
+    Ders Sırası
+    <header><p>Teorik</p></header>
+    <article><p>Uygulama</p></article>
+    <footer><p>Proje Oluşturma</p></footer>
+  </section>
+  <aside>
+  </aside>
+  <footer>
+    <p> 2019 Copyright Emre</p>
+  </footer>
+</body>
+</html>
