--- a/index.html
+++ b/index.html
@@ -14,17 +14,15 @@
 </hgroup>
   </header>
   <nav>
-  <div class="dropdown">
-  <button class="mainmenubtn">Ana Menü</button>
-  <div class="dropdown-child">
-    <a href="http://wwww.alanadiniz.com/sayfa1.html">Alt Sayfa 1</a>
-    <a href="http://wwww.alanadiniz.com/sayfa2.html">Alt Sayfa 2</a>
-    <a href="http://wwww.alanadiniz.com/sayfa3.html">Alt Sayfa 3</a>
-    <a href="http://wwww.alanadiniz.com/sayfa4.html">Alt Sayfa 4</a>
-    <a href="http://wwww.alanadiniz.com/sayfa5.html">Alt Sayfa 5</a>
+  <div id="leftSidebar">
+  	<ul>
+  		<li><a href="#">Ana Sayfa</a></li>
+  		<li><a href="#">Ana Sayfa</a></li>
+  		<li><a href="#">Ana Sayfa</a></li>
+  		<li><a href="#">Ana Sayfa</a></li>
+  	</ul>
+  	<div class="liftSidebarButton"></div>
   </div>
-</div>
-
   </nav>
   <section>
     Ders Sırası
