--- a/index.html
+++ b/index.html
@@ -1,39 +1,61 @@
-<DOCTYPE! html>
-<html lang="en">
+﻿<!DOCTYPE html>
+<html>
 <head>
-	<script src="script.js"></script>
-	<link rel="stylesheet" href="style.css" />
-  <meta charset="utf-8">
-  <title>Basic html layout example</title>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-9" />
+
+<link rel="stylesheet" href="style.css" type="text/css">
 </head>
-<body class="hello">
-  <header>
-  	<hgroup>
-    <h1>JAVA</h1>
-    <h2>Programlama</h2>
-</hgroup>
-  </header>
-  <nav>
-  <div id="leftSidebar">
-  	<ul>
-  		<li><a href="#">Ana Sayfa</a></li>
-  		<li><a href="#">Ana Sayfa</a></li>
-  		<li><a href="#">Ana Sayfa</a></li>
-  		<li><a href="#">Ana Sayfa</a></li>
-  	</ul>
-  	<div class="liftSidebarButton"></div>
-  </div>
-  </nav>
-  <section>
-    Ders Sırası
-    <header><p>Teorik</p></header>
-    <article><p>Uygulama</p></article>
-    <footer><p>Proje Oluşturma</p></footer>
-  </section>
-  <aside>
-  </aside>
-  <footer>
-    <p> 2019 Copyright Emre</p>
-  </footer>
+<body>
+
+<nav>
+<ul>
+
+
+
+<li><a href="#">Anasayfa</a></li>
+<li><a href="#">Programlama Dilleri</a>
+<ul>
+</li><a href="#">Java</a></li>
+</li><a href="#">C</a></li>
+</li><a href="#">c++</a></li>
+</li><a href="#">C#</a></li>
+</ul>
+</li>
+
+
+<li><a href="#">Web Tasarım Dilleri</a>
+<ul>
+</li><a href="#">HTML</a></li>
+</li><a href="#">PHP</a></li>
+</li><a href="#">ASP.NET</a></li>
+</li><a href="#">JavaScript</a></li>
+</li><a href="#">CSS</a></li>
+</ul>
+</li>
+
+
+<li><a href="#">Veri Tabanı Dilleri</a>
+<ul>
+</li><a href="#">SQL</a></li>
+</li><a href="#">MYSQL</a></li>
+</ul>
+</li>
+
+<li><a href="#">Hakkımızda</a></li>
+<li><a href="#">İletişim</a></li>
+
+
+
+
+
+
+
+
+
+
+</ul>
+</nav>
+
+
 </body>
 </html>
