--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-
+<banner>
+<img src="resim\banner.jpg" class="banneresim"></img
+</banner>
 <nav>
 <ul>
 
@@ -55,7 +57,54 @@
 
 </ul>
 </nav>
+<div id="anasayfayazi">
+<img src="resim\resim1.png" class="solakaydir">
+<font face="tahoma" size="3px"><p align="left"> Merhaba arkadaşlar, bu yazımızda sizlere programlama dillerinden bahsedeceğim.
+ Hangi dillerin hangi alanlarda kullanılabildiklerini, kendi projesini geliştirmek
+ isteyen makerlar için en uygun dillerin neler olduğu 
+ konusunda bilgi vermeye çalışacağım.Öncelikle programlama yapmadan önce algoritma
+ mantığını kavramanız gerekmektedir.Burada kısaca bahsedeceğim.</p>
+ <br><br><br>
+ <h4>Algoritma Nedir?</h4>
+<p align="left">Bir sorunu çözmek veya belirlenmiş bir amaca ulaşmak için tasarlanan yola, 
+takip edilen işlem basamaklarına algoritma denir.
+ Tüm programlama dillerinin temelinde algoritma vardır.
+ Algoritmalar, programlama dillerinin vasıtasıyla uygulanabilirler.
+ Programda kullanılan dil ve kullanım alanı ne olursa olsun
+ algoritması olmayan bir program yoktur.</p><br>
+ 
+ <h4>Programlama Dilleri</h4>
+ <ol type="1">
+ <li>C++</li>
+ <li>C#</li>
+ <li>Java</li>
+ <li>C</li>
+ </ol><br><br>
+ <p> Programlama dillerinden başka olarak web tasarım dilleri mevcuttur.Bu web tasarım dilleri
+ internet sitesi oluşturmaya yarar.Mantık olarak aynıdır.Sadece satır kapama ve bir kaç 
+ özellik bulunur.</p><br>
+ <h4>Web Tasarım Dilleri</h4>
+  <ol type="1">
+ <li>HTML</li>
+ <li>PHP</li>
+ <li>ASP.NET</li>
+ <li>JavaScript</li>
+ <li>CSS</li>
+ </ol>
+ <br><br>
+ <p>Veri tabanı sistemi vardır.Bu sistem programlamada gerçekleştirilen verileri
+ saklar.Veri tabanı hem web sitelerinde hemde programlama dillerinde kullanılabilir.
+ Kısacası veri tabanı bir depolama birimidir.Veri tabanı sayesinde depolanan verileri
+ istediğimiz zaman çağırıp bakabilir ve üstünde değişiklikler yapabiliriz.
+ <br>
+ <h4>Veri Tabanı Dilleri</h4>
+ <ol type="1">
+ <li>SQL</li>
+ <li>MYSQL</li>
+ </ol>
+ </font>
 
+</div>
 
 </body>
 </html>
