--- a/index.html
+++ b/index.html
@@ -14,37 +14,37 @@
 
 
 
-<li><a href="#">Anasayfa</a></li>
+<li><a href="index.html">Anasayfa</a></li>
 <li><a href="#">Programlama Dilleri</a>
 <ul>
-</li><a href="#">Java</a></li>
-</li><a href="#">C</a></li>
-</li><a href="#">c++</a></li>
-</li><a href="#">C#</a></li>
+</li><a href="java.html">Java</a></li>
+</li><a href="c.html">C</a></li>
+</li><a href="c++.html">c++</a></li>
+</li><a href="csharp.html">C#</a></li>
 </ul>
 </li>
 
 
 <li><a href="#">Web Tasarım Dilleri</a>
 <ul>
-</li><a href="#">HTML</a></li>
-</li><a href="#">PHP</a></li>
-</li><a href="#">ASP.NET</a></li>
-</li><a href="#">JavaScript</a></li>
-</li><a href="#">CSS</a></li>
+</li><a href="html.html">HTML</a></li>
+</li><a href="php.html">PHP</a></li>
+</li><a href="asp.html">ASP.NET</a></li>
+</li><a href="javascript.html">JavaScript</a></li>
+</li><a href="css.html">CSS</a></li>
 </ul>
 </li>
 
 
 <li><a href="#">Veri Tabanı Dilleri</a>
 <ul>
-</li><a href="#">SQL</a></li>
-</li><a href="#">MYSQL</a></li>
+</li><a href="sql.html">SQL</a></li>
+</li><a href="mysql.html">MYSQL</a></li>
 </ul>
 </li>
 
-<li><a href="#">Hakkımızda</a></li>
-<li><a href="#">İletişim</a></li>
+<li><a href="hakkimizda.html">Hakkımızda</a></li>
+<li><a href="iletisim.html">İletişim</a></li>
 
 
 
@@ -105,6 +105,10 @@ takip edilen işlem basamaklarına algoritma denir.
  </font>
 
 </div>
+
+<footer>
+Copyright © 2019 - Programlama Bilgisi - All Rights Reserved.
+</footer>
 
 </body>
 </html>
