--- a/java.html
+++ b/java.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-9" />
@@ -14,49 +14,88 @@
 
 
 
-<li><a href="#">Anasayfa</a></li>
+<li><a href="index.html">Anasayfa</a></li>
 <li><a href="#">Programlama Dilleri</a>
 <ul>
-</li><a href="#">Java</a></li>
-</li><a href="#">C</a></li>
-</li><a href="#">c++</a></li>
-</li><a href="#">C#</a></li>
+</li><a href="java.html">Java</a></li>
+</li><a href="c.html">C</a></li>
+</li><a href="c++.html">c++</a></li>
+</li><a href="csharp.html">C#</a></li>
 </ul>
 </li>
 
 
 <li><a href="#">Web Tasarım Dilleri</a>
 <ul>
-</li><a href="#">HTML</a></li>
-</li><a href="#">PHP</a></li>
-</li><a href="#">ASP.NET</a></li>
-</li><a href="#">JavaScript</a></li>
-</li><a href="#">CSS</a></li>
+</li><a href="html.html">HTML</a></li>
+</li><a href="php.html">PHP</a></li>
+</li><a href="asp.html">ASP.NET</a></li>
+</li><a href="javascript.html">JavaScript</a></li>
+</li><a href="css.html">CSS</a></li>
 </ul>
 </li>
 
 
 <li><a href="#">Veri Tabanı Dilleri</a>
 <ul>
-</li><a href="#">SQL</a></li>
-</li><a href="#">MYSQL</a></li>
+</li><a href="sql.html">SQL</a></li>
+</li><a href="mysql.html">MYSQL</a></li>
 </ul>
 </li>
 
-<li><a href="#">Hakkımızda</a></li>
-<li><a href="#">İletişim</a></li>
-
-
-
-
-
+<li><a href="hakkimizda.html">Hakkımızda</a></li>
+<li><a href="iletisim.html">İletişim</a></li>
 
 
 
 
 
 </ul>
+</nav>
 
+<div id="anasayfayazi">
+<img src="resim\java.png" class="solakaydir">
+<font face="tahoma" size="3px"><p align="left"><p>Java, Sun Microsystems mühendislerinden James Gosling tarafından geliştirilmeye başlanmış açık kodlu, nesneye yönelik, zeminden bağımsız, yüksek verimli,
+ çok işlevli, yüksek seviye, adım adım işletilen (yorumlanan-interpreted) bir dildir.
+Java, Sun Microsystems'den James Gosling tarafından geliştirilen bir programlama dilidir (Sun Microsystem'in şu anda Oracle Corporation ile bağlı ortaklığı bulunmaktadır) ve 1995 yılında 
+Sun Microsystems'in çekirdek bileşeni olarak piyasaya sürülmüştür. Bu dil C ve C++'dan birçok sözdizim türetmesine rağmen bu türevler daha basit nesne modeli ve daha az düşük seviye olanaklar içerir.
+ Java uygulamaları bilgisayar mimarisine bağlı olmadan herhangi bir Java Virtual Machine (JVM)'de çalışabilen tipik bytecode'dur (sınıf dosyası).
+
+Java'nın sık kullanılan sloganlarından biri olan, çevirisi "bir defa yaz, her yerde çalıştır" olan "write once, run anywhere" (WORA) Java'nın derlenmiş Java kodunun Java'yı destekleyen bütün platformlarda
+ tekrar derlenmeye ihtiyacı olmadan çalışabileceğini ima eder.2016 yılında bildirilen 9 milyon geliştiricisi ile, özellikle istemci sunucu web uygulamaları için olmak üzere, kullanımda olan en popüler 
+programlama dillerinden birisidir.
+
+Java ilk çıktığında daha çok küçük cihazlarda kullanılmak için tasarlanmış ortak bir düzlem dili olarak düşünülmüştü. Ancak düzlem bağımsızlığı özelliği ve tekbiçim kütüphane desteği C ve C++'tan çok daha 
+üstün ve güvenli bir yazılım geliştirme ve işletme ortamı sunduğundan, hemen her yerde kullanılmaya başlanmıştır. Şu anda özellikle kurumsal alanda ve mobil cihazlarda son derece popüler olan Java özellikle
+ J2SE 1.4 ve 5 sürümü ile masaüstü uygulamalarda da yaygınlaşmaya başlamıştır. Java'nın ilk sürümü olan Java 1.0 (1995) Java Platform 1 olarak adlandırıldı ve tasarlama amacına uygun olarak küçük boyutlu ve
+ kısıtlı özelliklere sahipti. Daha sonra düzlemin gücü gözlendi ve tasarımında büyük değişiklikler ve eklemeler yapıldı. Bu büyük değişikliklerden dolayı geliştirilen yeni düzleme Java Platform 2 adı verildi
+ ama sürüm numarası 2 yapılmadı, 1.2 olarak devam etti. 2004 sonbaharında çıkan Java 5, geçmiş 1.2, 1.3 ve 1.4 sürümlerinin ardından en çok gelişme ve değişikliği barındıran sürüm oldu. Java SE 8 ise Java 
+teknolojisinin günümüz sürümüdür. 13 Kasım 2006'da Java düzlemi GPL ruhsatıyla açık kodlu hale gelmiştir.</p>
+<br><br><BR>
+
+<h4>Sürümler</h4>
+<p>
+2017 itibarıyla sadece Java 8 resmi olarak desteklenmektedir. Java'nın ana sürümleri aşağıdaki gibidir:
+
+</p>
+<ol>
+<li>JDK 1.0 (Ocak 23, 1996)</li>
+<li>JDK 1.1 (Şubat 19, 1997)</li>
+<li>J2SE 1.2 (Aralık 8, 1998)</li>
+<li>J2SE 1.3 (Mayıs 8, 2000)</li>
+<li>J2SE 1.4 (Şubat 6, 2002)</li>
+<li>J2SE 5.0 (Eylül 30, 2004)</li>
+<li>Java SE 6 (Aralık 11, 2006)</li>
+<li>Java SE 7 (Temmuz 28, 2011)</li>
+<li>Java SE 8 (Mart 18, 2014)</li>
+</ol>
+<br><br>
+<p>Java için kullanılabilecek en iyi program <b>NETBEANS</b> programıdır.</p>
+
+</font>
+
+
+</div>
 
 
 </body>
