--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
+<div id="anadiv">
 <banner>
 <img src="resim\banner.jpg" class="banneresim"></img
 </banner>
@@ -56,8 +57,17 @@
 
 
 </ul>
-
-
-
+</nav>
+<div id="anasayfayazi">
+<div id="hakkimizda" >
+Programalam bilgi sayfamız programlama öğrenmek isteyen kişilere yardımcı olmak ve onlara yol göstermektir.
+Günümüz dünyanın en önemli mesleklerinden biri olan programlama artık her meslek dalında işe yarıyor.
+Bizim burdaki amacımız programlaam öğrenmek isteyen kişilere yardımcı olmaktır.
+</div>
+</div>
+</div>
+<footer>
+Copyright © 2019 - Programlama Bilgisi - All Rights Reserved.
+</footer>
 </body>
 </html>
