--- a/java.html
+++ b/java.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
+<div id="anadiv">
 <banner>
 <img src="resim\banner.jpg" class="banneresim"></img
 </banner>
@@ -96,7 +97,9 @@ teknolojisinin günümüz sürümüdür. 13 Kasım 2006'da Java düzlemi GPL ruh
 
 
 </div>
-
-
+</div>
+<footer>
+Copyright © 2019 - Programlama Bilgisi - All Rights Reserved.
+</footer>
 </body>
 </html>
