--- a/mysql.html
+++ b/mysql.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
+<div id="anadiv">
 <banner>
 <img src="resim\banner.jpg" class="banneresim"></img
 </banner>
@@ -56,8 +57,41 @@
 
 
 </ul>
+</nav>
+<div id="anasayfayazi">
+<img src="resim\mysql.png" class="solakaydir">
+<font face="tahoma" size="3px"><p align="left">MySQL, altı milyondan fazla sistemde yüklü bulunan çoklu iş parçacıklı (İng. multi-threaded), çok kullanıcılı (İng. multi-user), hızlı ve sağlam (İng. robust) bir veri tabanı yönetim sistemidir.
 
+UNIX, OS/2 ve Windows platformları için ücretsiz dağıtılmakla birlikte ticari lisans kullanmak isteyenler için de ücretli bir lisans seçeneği de mevcuttur. Linux altında daha hızlı bir performans sergilemektedir. Kaynak kodu açık olan MySQL'in pek çok platform için çalıştırılabilir ikilik kod halindeki indirilebilir sürümleri de mevcuttur. Ayrıca ODBC sürücüleri de bulunduğu için birçok geliştirme platformunda rahatlıkla kullanılabilir.
 
+Geliştiricileri, 500'den fazlası 7.000.000 kayıt içeren 10.000 tablodan oluşan kendi veritabanlarını (100 gigabyte civarında veri) MySQL'de tuttuklarını söylüyorlar.
 
+Web sunucularında en çok kullanılan veri tabanı olup ASP, PHP gibi birçok Web programlama dili ile kullanılabilir.
+
+MySQL, tuttuğu tablolarla çok kullanıcılı sistemlerde söz konusu olan erişim hakları sorununu başarılı bir şekilde çözmektedir. MySQL'in 4.0 sürümü ile birlikte "transaction" desteği, 4.1 sürümüyle birlikte de alt sorgu desteği eklenmiştir.
+
+Ayrıca "veri tutarlılığını (İng. referential integrity)" sağlama işinin programcıya bırakılması tercih edilmiştir, ancak bu bir dezavantaj olarak görülmeyebilir. Çünkü pek çok veri tabanı programcısı VTYS'lerdeki veri tutarlılığının esnek olmayan, zorlayıcı bir özellik olduğunu düşünmektedir.
+
+</p>
+<br><br><br><br>
+<h4>Temel Özellikleri</h4>
+<ul type="DISC">
+<li>Tables (tablolar)</li>
+<li>Views(Görüntülemeler)</li>
+<li>Procedures(Prosedürler)</li>
+<li>Triggers(Tetikler)</li>
+<li>Cursors(İmleçler)</li>
+</ol>
+<br>
+<h4>Yönetim Araçları</h4>
+<p>MySQL için çok çeşitli grafiksel arayüze sahip programlar mevcuttur. Bunlar içerisinden en bilineni yine MySQL'i geliştiren firma tarafından geliştirilmiş ücretsiz bir yazılım olan MySQL GUI Tools'dur. Bunun yanında PHP ile geliştirilmiş phpMyAdmin diğer alternatif bir yazılımdır. Tek bir PHP dosyası ile işlem yapan Javascript ile birçok işi kolaylaştıran Adminer* yazılımı da önerilmektedir.
+
+</p>
+</font>
+</div>
+</div>
+<footer>
+Copyright © 2019 - Programlama Bilgisi - All Rights Reserved.
+</footer>
 </body>
 </html>
