--- a/sql.html
+++ b/sql.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
+<div id="anadiv">
 <banner>
 <img src="resim\banner.jpg" class="banneresim"></img
 </banner>
@@ -56,8 +57,24 @@
 
 
 </ul>
+</nav>
+<div id="anasayfayazi">
+<img src="resim\sql.png" class="solakaydir">
+<font face="tahoma" size="3px"><p align="left">
+SQL, (İngilizce "Structured Query Language", Türkçe: Yapılandırılmış Sorgu Dili, telaffuz: ɛs kjuː ˈɛl/) verileri yönetmek ve tasarlamak için kullanılan bir veritabanı yönetim sistemidir. SQL, kendisi bir programlama dili olmamasına rağmen birçok kişi tarafından programlama dili olarak bilinir. SQL herhangi bir veri tabanı ortamında kullanılan bir alt dildir. SQL ile yalnızca veri tabanı üzerinde işlem yapılabilir. SQL'e özgü cümleler kullanarak veri tabanına kayıt eklenebilir, olan kayıtlar değiştirilebilir, silinebilir ve bu kayıtlardan listeler oluşturulabilir.
+</p>
+<br>
+<h4>Tarihçe</h4>
+<p>
+Veritabanı Yaklaşımı ile birlikte bir veri sorgulama diline veya aracına ihtiyaç duyulmuştur. İlk başta matematiksel bir sözdizimine sahip olan SQUARE adlı bir dil geliştirilmiştir. Geniş kullanıcı kitleleri tarafında kolay kullanılabilmesi için matematiksel söz dizimli SQUARE dilinden vazgeçilerek, İngilizce'ye benzer sözdizimine sahip bir dil oluşturulmuş ve SEQUEL olarak adlandırılmıştır. Daha sonra da bu SEQUEL dili, İngilizce söylenişine paralel olarak SQL olarak adlandırılmıştır.
 
-
-
+SQL dili ilişkisel alanda büyük ilgi görmüş ve İlişkisel Veri Tabanı Yönetim Sistemlerinin (İVTYS) tümünde yer alan standart dil görünümü kazanmıştır. Bu nedenle Veri Tabanı konusunda çalışan tüm bilişim teknik personeli tarafından bilinmesi gereken bir dil konumundadır.
+</p>
+</font>
+</div>
+</div>
+<footer>
+Copyright © 2019 - Programlama Bilgisi - All Rights Reserved.
+</footer>
 </body>
 </html>
