--- a/html.html
+++ b/html.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
+<div id="anadiv">
 <banner>
 <img src="resim\banner.jpg" class="banneresim"></img
 </banner>
@@ -57,7 +58,29 @@
 
 </ul>
 
+</nav>
+<div id="anasayfayazi">
+<img src="resim\html.png" class="solakaydir">
+<font face="tahoma" size="3px"><p align="left">
+
+Hiper Metin İşaretleme Dili (İngilizce Hypertext Markup Language, ks. HTML) web sayfalarını oluşturmak için kullanılan standart metin işaretleme dilidir. Dilin son sürümü HTML5'tir.
+
+HTML, bir programlama dili olarak tanımlanamaz. Zira HTML kodlarıyla kendi başına çalışan bir program yazılamaz. Ancak bu dili yorumlayabilen programlar aracılığıyla çalışabilen programlar yazılabilir. Programlama dili denilememesinin nedeni tam olarak budur. Temel gereği yazı, görüntü, video gibi değişik verileri ve bunları içeren sayfaları birbirine basitçe bağlamak, buna ek olarak söz konusu sayfaların web tarayıcısı yazılımları tarafından düzgün olarak görüntülenmesi için gerekli kuralları belirlemektir. HTML kodunu web tarayıcıları okur, yorumlar ve görsel hale dönüştürürler, dolayısıyla aynı HTML kodunun farklı tarayıcılarda farklı sonuç vermesi olasıdır. CSS ve JavaScript ile beraber kullanıldığında HTML vasıtasıyla görsel ve dinamik web siteleri yaratılabilir.
 
 
+</p>
+<br>
+<h4>Tarihi</h4>
+<p>
+1980 yılında CERN'de görevli olan Tim Berners-Lee, CERN araştırmacılarının bilgilerini ve dökümanlarını birbirleriyle paylaşabilmeleri için bir sistem olması gerektiğine inanıyordu. Bu yüzden prototip olarak ENQUIRE isimli sistemi önerdi. 1989 yılına gelindiğinde internet tabanlı sistemin ilk temellerini yine aynı isim Tim Berners Lee attı.[1] 1990 yılında HTML işaretleme dilini geliştirmesinden sonra World Wide Web(WWW) sistemini kurmuştur. Bu şekilde CERN'de bilgi paylaşımını kolaylaştırma amacı doğrultusunda ortaya çıkan HTML günümüzde hayatımızın vazgeçilmezi olan webin başlıca temelini oluşturmuştur.
+
+
+</p>
+</font>
+</div>
+</div>
+<footer>
+Copyright © 2019 - Programlama Bilgisi - All Rights Reserved.
+</footer>
 </body>
 </html>
