--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-<banner>
-<img src="resim\banner.jpg" class="banneresim"></img
-</banner>
+<div id="anadiv">
+
+<img src="resim\banner.jpg" class="banneresim"></img>
+
 <nav>
 <ul>
 
@@ -105,7 +106,7 @@ takip edilen işlem basamaklarına algoritma denir.
  </font>
 
 </div>
-
+</div>
 <footer>
 Copyright © 2019 - Programlama Bilgisi - All Rights Reserved.
 </footer>
