--- a/javascript.html
+++ b/javascript.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
+<div id="anadiv">
 <banner>
 <img src="resim\banner.jpg" class="banneresim"></img
 </banner>
@@ -56,8 +57,26 @@
 
 
 </ul>
+</nav>
+<div id="anasayfayazi">
+<img src="resim\js.png" class="solakaydir">
+<font face="tahoma" size="3px"><p align="left">JavaScript, yaygın olarak web tarayıcılarında kullanılmakta olan dinamik bir programlama dilidir. JavaScript ile yazılan istemci tarafı betikler sayesinde tarayıcının kullanıcıyla etkileşimde bulunması, tarayıcının kontrol edilmesi, asenkron bir şekilde sunucu ile iletişime geçilmesi ve web sayfası içeriğinin değiştirilmesi gibi işlevler sağlanır. JavaScript, Node.js gibi platformlar sayesinde sunucu tarafında da yaygın olarak kullanılmaktadır.
 
+JavaScript prototip-tabanlı, dinamik türlere ve birinci-sınıf fonksiyonlara sahip bir betik dilidir. Nesne yönelimli, imperatif ve fonksiyonel programlama prensiplerine sahiptir.
 
+JavaScript ve Java arasında; isimleri, yazım şekli ve standart kütüphanelerindeki benzerlikler dışında bir bağlantı yoktur ve iki dilin semantikleri çok farklıdır. JavaScript'in yazım şekli C programlama dilinden türetilmiş, semantiği ve tasarımı ise Self ve Scheme programlama dillerinden esinlenmiştir.
+</p>
+<br>
+<h4>Microsoft'un Uygulaması</h4>
+
+<p> Microsoft, 1996 yılında JScript ve VBScript betik dillerini yayınladı. JScript Netscape'in JavaScript'ine benzerken VBScript Visual Basic temelliydi ve var olan Visual Basic programcılarının kolay bir geçiş yapmasını hedefliyordu. Aynı dönemde Microsoft ilk defa CSS desteği de sağladı ancak hem CSS hem de JScript desteği Netscape'in o zamana kadar sağladıkları ile tutarlı çalışmıyordu. Bu durum web tasarımcıları ve geliştiricileri arasında bir kargaşa yaratmış ve tarayıcı savaşlarının ilk yıllarında sitelerin altında tipik olarak görülen "En iyi Internet Explorer ile izlenir" ya da "En iyi Netscape ile izlenir" gibi logoların ortaya çıkmasına neden olmuştur
+</p>
+</font>
+</div>
+</div>
+<footer>
+Copyright © 2019 - Programlama Bilgisi - All Rights Reserved.
+</footer>
 
 </body>
 </html>
