--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -59,11 +59,24 @@
 </ul>
 </nav>
 <div id="anasayfayazi">
-<div id="hakkimizda" >
-Programalam bilgi sayfamız programlama öğrenmek isteyen kişilere yardımcı olmak ve onlara yol göstermektir.
+<img src="resim\hakkimizda.jpg" class="solakaydir">
+<font color="red" face="Book Antiqua"size="6px">Programalam bilgi sayfamız programlama öğrenmek isteyen kişilere yardımcı olmak ve onlara yol göstermektir.
 Günümüz dünyanın en önemli mesleklerinden biri olan programlama artık her meslek dalında işe yarıyor.
-Bizim burdaki amacımız programlaam öğrenmek isteyen kişilere yardımcı olmaktır.
-</div>
+Bizim burdaki amacımız programlaam öğrenmek isteyen kişilere yardımcı olmaktır. programlama ile ilgili temel kavramları tanıyarak kodlama öncesi hazırlıkları yapabilme, basit kodlar yazabilme, kontrol deyimlerini kullanabilme ve alt programlarla çalışma yeterliklerinin kazandırılması amaçlanmaktadır.  
+Dersin Modülleri Süre Kazandırılan Yeterlikler Kodlamaya Hazırlık 40/32 Kodlama öncesi hazırlıkları yapmak.
+Bu ders ile öğrenciye; programlama ile ilgili temel kavramları tanıyarak kodlama öncesi hazırlıkları yapabilme, basit kodlar yazabilme, kontrol deyimlerini kullanabilme ve alt programlarla çalışma yeterliklerinin kazandırılması amaçlanmaktadır.
+Her şeyden önce herkes bir programlama dilini öğrenebilir. Bilgisayarıprogramlama
+yüksek bir zekâ ve matematik bilgisi gerektirmez. Sadece asla vazgeçmeme sabrıve
+öğrenme isteği yeterlidir.
+Programlama bir hünerdir. Bazıinsanlar doğal olarak diğerlerinden daha iyidir, ama
+herkes pratik yaparak iyi olabilir. Başaramamaktan korkmak yerine, kendinizi bu maharete
+vererek, öğrenmek için uğraşın. Programlama eğlencelidir, fakat sinir bozucu olabilir ve
+zamanınızın da boşa geçmesine neden olabilir. Bu sebeple bu modülleri takip ederek, en az
+sıkıntıve en yüksek memnuniyet ile programlamayıöğreneceğiz.
+Bu modül ile kazanacağınız konular alt program yazmak, kullanıcıdostu arabirim
+yapmak, hata düzeltme yöntemleri ile hatalarıdüzeltme ve dosyalamadır. Modülü
+bitirdiğinizde anlamadığınız yerleri tekrar okuyup uygulayınız
+</font>
 </div>
 </div>
 <footer>
