--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 <div id="anadiv">
-
+<banner>
 <img src="resim\banner.jpg" class="banneresim"></img>
-
+</banner>
 <nav>
 <ul>
 
@@ -60,7 +60,7 @@
 </nav>
 <div id="anasayfayazi">
 <img src="resim\resim1.png" class="solakaydir">
-<font face="tahoma" size="3px"><p align="left"> Merhaba arkadaşlar, bu yazımızda sizlere programlama dillerinden bahsedeceğim.
+<font face="tahoma" size="5px"><p align="left"> Merhaba arkadaşlar, bu yazımızda sizlere programlama dillerinden bahsedeceğim.
  Hangi dillerin hangi alanlarda kullanılabildiklerini, kendi projesini geliştirmek
  isteyen makerlar için en uygun dillerin neler olduğu 
  konusunda bilgi vermeye çalışacağım.Öncelikle programlama yapmadan önce algoritma
