--- a/sql.html
+++ b/sql.html
@@ -70,6 +70,15 @@ Veritabanı Yaklaşımı ile birlikte bir veri sorgulama diline veya aracına ih
 
 SQL dili ilişkisel alanda büyük ilgi görmüş ve İlişkisel Veri Tabanı Yönetim Sistemlerinin (İVTYS) tümünde yer alan standart dil görünümü kazanmıştır. Bu nedenle Veri Tabanı konusunda çalışan tüm bilişim teknik personeli tarafından bilinmesi gereken bir dil konumundadır.
 </p>
+<br><br>
+<h4>Temel Özellikleri</h4>
+<ul type="DISC">
+<li>SQL bir veri tabanına erişmenizi sağlar.</li>
+<li>SQL bir ANSI standart bilgisayar lisanıdır.</li>
+<li>SQL bir veri tabanı ile ilgili sorguları çalıştırmanızı sağlar.</li>
+<li>SQL bir veri tabanından veri almanızı sağlar.</li>
+<li>SQL bir veri tabanına yeni kayıt eklemenizi,silmenizi ve güncellemenizi sağlar.</li>
+</ol>
 </font>
 </div>
 </div>
